--- a/pom.xml
+++ b/pom.xml
@@ -72,10 +72,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.36</version>
         </dependency>
+
         <dependency>
-	<groupId>com.thoughtworks.xstream</groupId>
-	<artifactId>xstream</artifactId>
-	<version>1.4.8</version>
+	<groupId>org.scribe</groupId>
+	<artifactId>scribe</artifactId>
+	<version>1.3.7</version>
 </dependency>
         
         <dependency>
