--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,6 @@
 
     <dependencyManagement>
         <dependencies>
- 
             <dependency>
                 <groupId>org.glassfish.jersey</groupId>
                 <artifactId>jersey-bom</artifactId>
@@ -26,10 +25,24 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-        </dependencies>
+            </dependencies>
     </dependencyManagement>
 
     <dependencies>
+     <dependency>
+         <groupId>dota2</groupId>
+         <artifactId>dota2</artifactId>
+         <scope>system</scope>
+         <version>1.0</version>
+         <systemPath>/Users/wilsontan/Downloads/Dota/dota2.jar</systemPath>
+      </dependency>
+             <dependency>
+         <groupId>telegrambots-1.0</groupId>
+         <artifactId>telegrambots-1.0</artifactId>
+         <scope>system</scope>
+         <version>1.0</version>
+         <systemPath>/Users/wilsontan/Downloads/telegrambots-1.0.jar</systemPath>
+      </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.containers</groupId>
             <artifactId>jersey-container-grizzly2-http</artifactId>
@@ -101,6 +114,14 @@
         <sourceDirectory>${project.basedir}/java</sourceDirectory>
         <pluginManagement>
             <plugins>
+            	<plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-war-plugin</artifactId>
+		<version>2.6</version>
+		<configuration>
+			<failOnMissingWebXml>false</failOnMissingWebXml>
+		</configuration>
+	</plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
@@ -110,7 +131,7 @@
                             <manifest>
                                 <addClasspath>true</addClasspath>
                                 <classpathPrefix>lib/</classpathPrefix>
-                                <mainClass>org.telegram.Main</mainClass>
+                                <mainClass>org.wilson.telegram.Main</mainClass>
                             </manifest>
                         </archive>
                     </configuration>
@@ -120,7 +141,7 @@
                     <configuration>
                         <archive>
                             <manifest>
-                                <mainClass>org.telegram.Main</mainClass>
+                                <mainClass>org.wilson.telegram.Main</mainClass>
                             </manifest>
                         </archive>
                         <descriptorRefs>
