--- a/pom.xml
+++ b/pom.xml
@@ -36,13 +36,13 @@
          <version>1.0</version>
          <systemPath>/Users/wilsontan/Downloads/Dota/dota2.jar</systemPath>
       </dependency>
-             <dependency>
-         <groupId>telegrambots-1.0</groupId>
-         <artifactId>telegrambots-1.0</artifactId>
-         <scope>system</scope>
-         <version>1.0</version>
-         <systemPath>/Users/wilsontan/Downloads/telegrambots-1.0.jar</systemPath>
-      </dependency>
+      
+         <dependency>
+        <groupId>org.telegram</groupId>
+        <artifactId>telegrambots</artifactId>
+        <version>2.4.4</version>
+    </dependency>
+  
         <dependency>
             <groupId>org.glassfish.jersey.containers</groupId>
             <artifactId>jersey-container-grizzly2-http</artifactId>
